--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "UNLICENSED",ssssssss
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
