--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {fdhkfjnhfjgnh
-  "compilerOptions": {
+  "compilerOptions": {ssssssssssssss
     "strict": true,
     "module": "commonjs",
     "declaration": true,
